# computergeneration

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
tests/: completion.rs
