[package]
name = "computergeneration"
description = "compgen but all wrong"
license = "MIT"
homepage = "https://github.com/LPGhatguy/computergeneration"
version = "0.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
structopt = "0.3.21"
